--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
   <!-- <script src="vue.global.js"></script> -->
   <script src="vue.js"></script>
   <script src="buefy.min.js"></script>
+  <script src="msgpack.min.js"></script>
   <script src="app.js"></script>
 </body>
 
